# obu-rs

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: publish-pypi.yml
obu/: Cargo.toml  README.md  SECURITY.md
obu-py/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
obu-py/python/obu/: __init__.py  _obu.pyi  formats.py  secretgen.py  test_inheritance.py
obu-py/src/: lib.rs
obu-py/tests/: test_vectors.py
obu/benches/: benchmarks_zdcbc_b32.jsonl  benchmarks_zdcbc_b64.jsonl  benchmarks_zdcbc_c32.jsonl  benchmarks_zdcbc_hex.jsonl  zdcbc_b32.rs  zdcbc_b64.rs  zdcbc_c32.rs  zdcbc_hex.rs
obu/src/: base32.rs  codec.rs  constants.rs  dec.rs  encoding.rs  error.rs  format.rs  keygen.rs  legacy.rs  lib.rs  obu.rs  omnibu.rs  scheme.rs  upcbc.rs  zcodec.rs  zdcbc.rs  zdec.rs  zenc.rs  zmock1.rs  zsecret.rs
obu/tests/: basic_tests.rs  legacy_test_vectors.rs  legacy_tests.rs  obu_vectors.rs
