[workspace]
members = ["obu"]
resolver = "2"

# Release / bench profiles at the workspace level so they actually
# apply (Cargo silently ignores per-package profiles on non-root
# members). LTO benefits obu's own release and benchmark builds.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
